Fixed outline and flickering error text

--- a/src/components/forms/textInput/textInput.module.css
+++ b/src/components/forms/textInput/textInput.module.css
@@ -3,9 +3,7 @@
     font-size: 14px;
     font-weight: 600;
     margin-top: 10px;
+    padding-top: 2px;
     display: block;
 }
 
-.inputInvalid {
-    outline: red solid 3px !important;
-}
